<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DasShoppingList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_details">ListDetailsActivity</string>
    <string name="das_shopping_list">Das Shopping List</string>
    <string name="listOne">List 1</string>
    <string name="calcMenuButton">Calculator</string>
    <string name="listsMenuButton">Lists</string>
    <string name="addListButton">Add a list...</string>
    <string name="button0text">0</string>
    <string name="button1text">1</string>
    <string name="button2text">2</string>
    <string name="button3text">3</string>
    <string name="button4text">4</string>
    <string name="button5text">5</string>
    <string name="button6text">6</string>
    <string name="button7text">7</string>
    <string name="button8text">8</string>
    <string name="button9text">9</string>
    <string name="buttonPeriodText">.</string>
    <string name="buttonPlusMinusText">+/-</string>
    <string name="buttonAddText">+</string>
    <string name="buttonSubText">-</string>
    <string name="buttonMultText">X</string>
    <string name="buttonDivText">/</string>
    <string name="buttonEqualsText">=</string>
    <string name="buttonBackspaceText">←</string>
    <string name="buttonBracketsText">( )</string>
    <string name="buttonClearText">C</string>
    <string name="calcEntryBox">0123456789</string>
    <string name="calcButton">Calculator?</string>
    <string name="enterNewItem">Enter new item here</string>
    <string name="title_activity_item_details">ItemDetailsActivity</string>
    <string name="price">Price</string>
    <string name="notes">Notes</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="itemName">Carrots</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="selectCategory">Select a category</string>
    <string-array name="categoryArray">
        <item>Dairy</item>
        <item>Baking</item>
        <item>Produce</item>
    </string-array>

</resources>
