<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/calcEntryScreen"
        android:layout_alignParentTop="true"
        android:background="#ffd3dcff"
        android:textSize="40sp"
        android:gravity="right"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/calcEntryBox" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/calcEntryScreen"
        android:layout_alignParentStart="true"
        android:id="@+id/something">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonClearText"
            android:id="@+id/button"
            android:layout_row="1"
            android:layout_column="0"
            style="@style/redButton"
            android:onClick="OperationButtonClick" />

        <Space
            android:layout_width="20px"
            android:layout_height="5px"
            android:layout_row="2"
            android:layout_column="0" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_row="0"
            android:layout_column="0" />

        <Space
            android:layout_width="5px"
            android:layout_height="20px"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonDivText"
            android:id="@+id/button2"
            android:layout_row="1"
            android:layout_column="2"
            style="@style/opBtnStyle"
            android:onClick="OperationButtonClick" />

        <Space
            android:layout_width="5px"
            android:layout_height="20px"
            android:layout_row="1"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMultText"
            android:id="@+id/button3"
            android:layout_row="1"
            android:layout_column="4"
            style="@style/opBtnStyle"
            android:onClick="OperationButtonClick" />

        <Space
            android:layout_width="5px"
            android:layout_height="20px"
            android:layout_row="1"
            android:layout_column="5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonBackspaceText"
            android:id="@+id/button4"
            android:layout_row="1"
            android:layout_column="6"
            style="@style/redButton"
            android:onClick="OperationButtonClick" />

        <Button
            style="@style/digitBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button7text"
            android:id="@+id/buttonSeven"
            android:layout_row="3"
            android:layout_column="0"

            android:onClick="calcDigitClick" />

        <Space
            android:layout_width="20px"
            android:layout_height="5px"
            android:layout_row="4"
            android:layout_column="0" />

        <Button
            style="@style/digitBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button8text"
            android:id="@+id/buttonEight"
            android:layout_row="3"
            android:layout_column="2"
            android:onClick="calcDigitClick" />

        <Button
            style="@style/digitBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button9text"
            android:id="@+id/buttonNine"
            android:layout_row="3"
            android:layout_column="4"
            android:onClick="calcDigitClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSubText"
            android:id="@+id/button8"
            android:layout_row="3"
            android:layout_column="6"
            style="@style/opBtnStyle"
            android:onClick="OperationButtonClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button4text"
            android:id="@+id/buttonFour"
            android:layout_row="5"
            android:layout_column="0"
            style="@style/digitBtnStyle"
            android:onClick="calcDigitClick" />

        <Space
            android:layout_width="20px"
            android:layout_height="5px"
            android:layout_row="6"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button5text"
            android:id="@+id/buttonFive"
            android:layout_row="5"
            android:layout_column="2"
            style="@style/digitBtnStyle"
            android:onClick="calcDigitClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button6text"
            android:id="@+id/buttonSix"
            android:layout_row="5"
            android:layout_column="4"
            style="@style/digitBtnStyle"
            android:onClick="calcDigitClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonAddText"
            android:id="@+id/button12"
            android:layout_row="5"
            android:layout_column="6"
            style="@style/opBtnStyle"
            android:onClick="OperationButtonClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1text"
            android:id="@+id/buttonOne"
            android:layout_row="7"
            android:layout_column="0"
            style="@style/digitBtnStyle"
            android:onClick="calcDigitClick" />

        <Space
            android:layout_width="20px"
            android:layout_height="5px"
            android:layout_row="8"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2text"
            android:id="@+id/buttonTwo"
            android:layout_row="7"
            android:layout_column="2"
            style="@style/digitBtnStyle"
            android:onClick="calcDigitClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button3text"
            android:id="@+id/buttonThree"
            android:layout_row="7"
            android:layout_column="4"
            style="@style/digitBtnStyle"
            android:onClick="calcDigitClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonBracketsText"
            android:id="@+id/button16"
            android:layout_row="7"
            android:layout_column="6"
            style="@style/opBtnStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button0text"
            android:id="@+id/button17"
            android:layout_row="9"
            android:layout_column="0"
            style="@style/digitBtnStyle"
            android:onClick="calcDigitClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonPeriodText"
            android:id="@+id/buttonPeriod"
            android:layout_row="9"
            android:layout_column="2"
            style="@style/digitBtnStyle"
            android:onClick="miscButtonClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonPlusMinusText"
            android:id="@+id/button19"
            android:layout_row="9"
            android:layout_column="4"
            style="@style/digitBtnStyle"
            android:onClick="miscButtonClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonEqualsText"
            android:id="@+id/button20"
            android:layout_row="9"
            android:layout_column="6"
            style="@style/blueButton"
            android:onClick="OperationButtonClick" />
    </GridLayout>
</RelativeLayout>
