<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.dasshoppinglist.dasshoppinglist.MainListActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:text="@string/das_shopping_list" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/listOne"
        android:id="@+id/button"
        android:onClick="list_click"
        />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addListButton"
        android:onClick="addItems"
        />
    <EditText
        android:id="@+id/addListTextBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addListButton"/>
    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:drawSelectorOnTop="false"
        android:id="@+id/list"
        >

    </ListView>





</LinearLayout>
